{
    "name": "TestInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "4e9cec11-087e-4680-aad3-8ad3ad9f4949",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "cb52fec7-cc06-47d1-8305-246ee3271985",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "c6c9fdfc-ae0e-4373-b1fb-f4ea094244f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "be37a60a-e7ac-4bfe-a473-d41e2d1b24f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "73c9a3c9-9c35-40bc-a2cd-1815bb5f4256",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "2c7c4a8c-62cd-439c-ab34-3c45335be795",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LClick",
                    "type": "Button",
                    "id": "54761a1e-06ff-421f-8359-b689056938cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RClick",
                    "type": "Button",
                    "id": "b7d36b28-658c-4e92-ab17-c2902a867f57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4073f72-f153-4111-990b-affad6c275d6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fe8f35e-afcf-4e8a-a2cf-36af1e35ae4c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6145bf24-e63e-475b-ab77-519ff8d68430",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76419778-11a6-4035-ad5c-f37bbfd04e7e",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94cf805c-3e1e-4d96-ae2f-3bad92bd2fe7",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c2f4c89-4f1f-420c-a55f-0eca5c34857b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "LClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60beedf3-c11b-47d8-8607-fce8188ad8bd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "RClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}